src/test/ui/error-codes/E0191.stderr
error[E0191]: the value of the associated type `Bar` (from the trait `Trait`) must be specified
  --> $DIR/E0191.rs:5:12
   |
LL |     type Bar;
   |     --------- `Bar` defined here
...
LL | type Foo = dyn Trait;
   |            ^^^^^^^^^ associated type `Bar` must be specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0191`.
